# clack

./: .gitignore  Cargo.toml  Info.plist  README.md
assets/: clack.icns
scripts/: bundle.sh  dmg.sh  icon.sh  make-signing-cert.sh
soundpacks/: README.md
soundpacks/186ca33e-9998-4a28-974c-c21ac353c16e/: config.json
soundpacks/23D8CF7B-F99B-49FC-AE84-3F99DC728AD9/: config.json
soundpacks/31071be3-c9ad-44a4-8d38-aaa7fe414a58/: config.json
soundpacks/3AA3C556-AB47-4AB9-A791-498BF9910BF7/: config.json
soundpacks/4DA844A6-346E-4361-84FD-5BC142FF975E/: config.json
soundpacks/52722920-07ec-45b4-91cc-6f29cad794d2/: config.json
soundpacks/5e02cd62-f79b-43c4-8899-78bbb630a81d/: config.json
soundpacks/61861d39-1242-41f5-8cf9-5823c472ce28/: config.json
soundpacks/631754b0-eafe-4b14-b86e-61842f1f195c/: config.json
soundpacks/7A4C575C-2C5F-49F2-BCD0-966F0AC874A6/: config.json
soundpacks/980c6cc1-7daf-4584-8b0e-643b3a811a6d/: config.json
soundpacks/B9BFB429-16C6-449F-AA85-5DA083696F68/: config.json
soundpacks/C9F8EC9F-4FE0-414B-87AC-4D5B64BE84E0/: config.json
soundpacks/DE401889-0CCB-4522-A213-836AAD88C447/: config.json
soundpacks/F0CC3D8E-5B1E-4412-A3F0-8A4F70912D0E/: config.json
soundpacks/ab2657fe-dc0a-4c75-ab74-81d8f56002b0/: config.json
soundpacks/c3f120e1-809f-4265-8167-14d708c99a48/: config.json
soundpacks/c556e214-5d78-4fc1-a7fe-3eb3f53152ba/: config.json
soundpacks/c573d01e-2d20-4844-9286-a9e628ef8f3b/: config.json
soundpacks/ca2d54d7-31d0-4177-b26a-43d99a3bcaaf/: config.json
soundpacks/cf535c6d-9cc7-46a0-bf53-af6d3aeef534/: config.json
soundpacks/e05fa018-400e-4d9c-b357-d5467b07650c/: config.json
soundpacks/fada0d4f-c510-4c19-8cc3-d756c186de8e/: config.json
src/: dashboard.rs  launch.rs  main.rs  menu.rs  permissions.rs  settings.rs  state.rs
src/audio/: bank.rs  engine.rs  mod.rs  voice.rs
src/input/: keymap.rs  mod.rs  tap.rs
src/soundpack/: config.rs  loader.rs
