[package]
name = "clack"
version = "0.1.0"
edition = "2021"
description = "Native macOS mechanical keyboard sounds — a Rust rewrite of thock"
license = "MIT"

[dependencies]
cpal = "0.18"
hound = "3.5"
rtrb = "0.3"
arc-swap = "1"
fastrand = "2"
dirs = "6"
macos-accessibility-client = "0.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.24"
muda = "0.19"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-service-management = { version = "0.3", features = ["SMAppService", "SMErrors"] }

[dependencies.objc2-core-foundation]
version = "0.3"
features = ["CFBase", "CFRunLoop", "CFMachPort"]

[dependencies.objc2-core-graphics]
version = "0.3"
features = ["CGEvent", "CGEventTypes"]

[dependencies.objc2-app-kit]
version = "0.3"
features = [
    "NSApplication",
    "NSResponder",
    "NSRunningApplication",
]

[profile.release]
opt-level = 3
lto = true
